Fix z-index issues in example

--- a/examples/nextjs-lexical/app/globals.css
+++ b/examples/nextjs-lexical/app/globals.css
@@ -126,3 +126,7 @@ li::marker {
   text-align: start !important;
   text-align-last: start !important;
 }
+
+.lb-portal {
+  @apply z-30;
+}
